[Mac][Material Design] Center elements within the toolbar.

This cl fixes a regression in https://codereview.chromium.org/187033300
that leaves the toolbar's elements no longer vertically centered within
the toolbar.

R=avi@chromium.org
BUG=602393

Review URL: https://codereview.chromium.org/1876293002

Cr-Commit-Position: refs/heads/master@{#386519}

Former-commit-id: 4a9a39e0a0e2bd60e1ebd81b0dcac4a3525f64e3